--- a/source/compliant-platform-as-a-service/index.html.slim
+++ b/source/compliant-platform-as-a-service/index.html.slim
@@ -85,27 +85,28 @@ section#intro.section-article.container-gray-12
       p.lead Your app is now compliant on Datica.
       p Once you’re application is live on Datica you’ll enjoy a suite of tools and products to manage your application’s environment. From intrusion detection to backups and much much more.
 
-section#hitrust.section-article
-  .row.align-center.group
-    .columns.small-12.medium-10.large-8.text-center
-      img.lozad.logo-size--large.group--sm data-src="https://images.ctfassets.net/189dvqdsjh46/7ioiPF1zVKiqYkyCe4QKGi/6438fbb76abda83deac6b9c810745891/hitrust-logo.svg?fm=png&w=480" alt="HITRUST Certified"
-      h2.headline-3.nomargin HITRUST CSF Infrastructure
-  .row.align-center.small-up-1.large-up-3.row--card-grid
-    .column
-      .card.drop
-        .card-section
-          h4.headline-5 HITRUST is how healthcare does business
-          p The HITRUST Common Security Framework (CSF) has become the preferred way to prove compliance in healthcare. HITRUST certification helps establish and accelerate partnerships. If you plan to do business in healthcare at the speed of change, you need to be HITRUST CSF Certified.
-    .column
-      .card.drop
-        .card-section
-          h4.headline-5 Datica’s HITRUST CSF Certification gives you industry credibility overnight
-          p Datica leads the industry with the first, most complete HIPAA compliant cloud infrastructure. Datica CPaaS is HITRUST CSF Certified achieving the highest industry privacy and security standards across infrastructure providers.
-    .column
-      .card.drop
-        .card-section
-          h4.headline-5 You inherit Datica’s certification
-          p HITRUST allows for inheritance, which means if you are planning to obtain your own CSF certification, you can inherit Datica’s certificate to shortcut 40% of the time and costs of the process.
+section#hitrust.container-gray-11
+  .section-article.container-image--center.lozad data-background-image="/public/img/art/home-header-art-hexagons-anim.svg"
+    .row.align-center.group
+      .columns.small-12.medium-10.large-8.text-center
+        img.lozad.logo-size--large.group--sm data-src="https://images.ctfassets.net/189dvqdsjh46/7ioiPF1zVKiqYkyCe4QKGi/6438fbb76abda83deac6b9c810745891/hitrust-logo.svg?fm=png&w=480" alt="HITRUST Certified"
+        h2.headline-3.nomargin HITRUST CSF Infrastructure
+    .row.align-center.small-up-1.large-up-3.row--card-grid
+      .column
+        .card.drop
+          .card-section
+            h4.headline-5 HITRUST is how healthcare does business
+            p The HITRUST Common Security Framework (CSF) has become the preferred way to prove compliance in healthcare. HITRUST certification helps establish and accelerate partnerships. If you plan to do business in healthcare at the speed of change, you need to be HITRUST CSF Certified.
+      .column
+        .card.drop
+          .card-section
+            h4.headline-5 Datica’s HITRUST CSF Certification gives you industry credibility overnight
+            p Datica leads the industry with the first, most complete HIPAA compliant cloud infrastructure. Datica CPaaS is HITRUST CSF Certified achieving the highest industry privacy and security standards across infrastructure providers.
+      .column
+        .card.drop
+          .card-section
+            h4.headline-5 You inherit Datica’s certification
+            p HITRUST allows for inheritance, which means if you are planning to obtain your own CSF certification, you can inherit Datica’s certificate to shortcut 40% of the time and costs of the process.
 
 section#tech.section-article
   .row.align-center.group
