Updated CPaaS diagram, image tweaks on page; LQIP image experiment.

--- a/source/compliant-platform-as-a-service/index.html.slim
+++ b/source/compliant-platform-as-a-service/index.html.slim
@@ -58,32 +58,31 @@ section#intro.section-article.container-gray-12
     .columns.small-12.medium-10.large-8.text-center
       h1.headline-3 The Compliant Cloud Platform Perfectly Designed for Early-Stage Applications
       p The Datica Compliant Platform as a Service (CPaaS) makes hosting compliant healthcare applications as simple as <code>git-push</code>.
-      img.img-crisp.lozad.group--2x alt="Compliance Overview diagram" data-src="https://images.ctfassets.net/189dvqdsjh46/1zXwr2EWQoMkIskG68y8Qk/9b634cd5b8a778dc4fc7ae51d6a11239/platform-overview-diagram-2x.png" /
+  .row.align-center
+    .columns.small-12.medium-10.large-8.text-center
+      - diagram = "https://images.ctfassets.net/189dvqdsjh46/1zXwr2EWQoMkIskG68y8Qk/cc63f23b8f6d676b76e0e45242d4a629/platform-overview-diagram-2x.png"
+      img.img-crisp.lozad.group--2x height="475" src="https://images.ctfassets.net/189dvqdsjh46/1GQpi4JS8UIYUMyykysou0/b83234d89d75e91da39de18885072dff/platform-overview-diagram-lqip.svg" alt="Datica Compliant Platform as a Service Diagram" data-src="#{diagram}?w=640" data-srcset="#{diagram}?w=640 800w, #{diagram}?w=1200 1000w, #{diagram} 1200w" /
 
   #building.row.align-center
     .columns.small-12.text-center
       h2.headline-4.nomargin Building On CPaaS
       p.lead See how developers build compliant applications
-  .row.section-platform--technology-build
-    .columns.small-12.medium-4.align-center
-      img.lozad.pad alt="Build" data-src="https://images.ctfassets.net/189dvqdsjh46/6p4qvRe42kM8mcAyGqiIwE/f713310dfcf586ba5251e15f958f92f8/build_flow_step_1.png?w=400" /
-    .columns.small-12.medium-4.align-center
-      img.lozad.pad alt="Push" data-src="https://images.ctfassets.net/189dvqdsjh46/3Ijl0wpXiEmAk6iGwYA6gW/f1b6a04e20e3d5d9477473dd0d7114e2/build_flow_step_2.png?w=400" /
-    .columns.small-12.medium-4.align-center
-      img.lozad.pad alt="Compliance" data-src="https://images.ctfassets.net/189dvqdsjh46/3McfWoQ9Vmm4iciuu4oYe4/64ef01a47e5a89d1b31c45b8942bb076/build_flow_step_3.png?w=400" /
-  .row.section-platform--technology-build
-    .columns.small-12.medium-4.align-center
-      h4.headline-4.text-center Build
-      p.lead Do what you do best. Build your product.
-      p You’re building a product for healthcare. Be it for bettering patient outcomes through analytics or creating the next great telemedicine application.
-    .columns.small-12.medium-4.align-center
-      h4.headline-4.text-center Push
-      p.lead Git based deployments via the Datica CLI.
-      p You’re ready to get your application live. Whether you’re launching your first application or making a routine product release. Being HIPAA compliant is as easy as “git push”.
-    .columns.small-12.medium-4.align-center
-      h4.headline-4.text-center Compliance
-      p.lead Your app is now compliant on Datica.
-      p Once you’re application is live on Datica you’ll enjoy a suite of tools and products to manage your application’s environment. From intrusion detection to backups and much much more.
+  .row.align-center
+    .columns.small-12.medium-4.align-center.text-center
+      img.lozad.logo-size--xlarge.group--sm alt="Build" data-src="https://images.ctfassets.net/189dvqdsjh46/6p4qvRe42kM8mcAyGqiIwE/f713310dfcf586ba5251e15f958f92f8/build_flow_step_1.png?w=400" src="https://images.ctfassets.net/189dvqdsjh46/6p4qvRe42kM8mcAyGqiIwE/f713310dfcf586ba5251e15f958f92f8/build_flow_step_1.png?fm=jpg&w=200&q=10" /
+      h4.headline-4 Build
+      p.lead.nomargin Do what you do best. Build your product.
+      p.text-left You’re building a product for healthcare. Be it for bettering patient outcomes through analytics or creating the next great telemedicine application.
+    .columns.small-12.medium-4.align-center.text-center
+      img.lozad.logo-size--xlarge.group--sm alt="Push" data-src="https://images.ctfassets.net/189dvqdsjh46/3Ijl0wpXiEmAk6iGwYA6gW/f1b6a04e20e3d5d9477473dd0d7114e2/build_flow_step_2.png?w=400" src="https://images.ctfassets.net/189dvqdsjh46/3Ijl0wpXiEmAk6iGwYA6gW/f1b6a04e20e3d5d9477473dd0d7114e2/build_flow_step_2.png?fm=jpg&w=200&q=10" /
+      h4.headline-4 Push
+      p.lead.nomargin Git-based deployments via Datica CLI.
+      p.text-left You’re ready to get your application live. Whether you’re launching your first application or making a routine product release. Being HIPAA compliant is as easy as “git push”.
+    .columns.small-12.medium-4.align-center.text-center
+      img.lozad.logo-size--xlarge.group--sm alt="Compliance" data-src="https://images.ctfassets.net/189dvqdsjh46/3McfWoQ9Vmm4iciuu4oYe4/64ef01a47e5a89d1b31c45b8942bb076/build_flow_step_3.png?w=400" src="https://images.ctfassets.net/189dvqdsjh46/3McfWoQ9Vmm4iciuu4oYe4/64ef01a47e5a89d1b31c45b8942bb076/build_flow_step_3.png?fm=jpg&w=200&q=10" /
+      h4.headline-4 Manage Compliance
+      p.lead.nomargin Your app is now compliant on Datica.
+      p.text-left Once you’re application is live on Datica you’ll enjoy a suite of tools and products to manage your application’s environment. From intrusion detection to backups and much much more.
 /data-interchange="[, small]"
 section#hitrust.container-gray-11
   .section-article.container-image--center.lozad data-background-image="/public/img/art/hexagon-bg-simple-light.svg"
@@ -145,7 +144,7 @@ section#ui.section-article.container-gray-11
   .row.align-center
     .columns.small-12
       - ui = 'https://images.ctfassets.net/189dvqdsjh46/3n9ldRiT84qkuwESeoo4Mq/14115cc48d5c89252553e2966ad5c16a/cpaas-mockup-2017-2x.png'
-      img.lozad.group data-src=ui+'?w=600' data-srcset="#{ui}?w=800 1000w, #{ui} 1400w"
+      img.lozad.group height="792" src="https://images.ctfassets.net/189dvqdsjh46/5gKo0g0VXUiEQ8OcUIo4I4/fc98a3ed12ef581888974abed23fd97b/cpaas-mockup-2017-lqip.svg" data-src=ui+'?w=600' data-srcset="#{ui}?w=800 1000w, #{ui} 1400w"
   .row.align-center
     .columns.small-12.large-4
       = inline_svg('icon-large-mobile-globe', class: "icon-size--large svg-color--blue")
