--- a/source/partials/content/_card-case-study.erb
+++ b/source/partials/content/_card-case-study.erb
@@ -9,7 +9,7 @@
     <% end %>
     <div class="card-divider text-center">
         <a href="/customer/<%= cf_customer["slug"] %>" title="<%= cf_customer["company_name"] %> case study">
-            <img class="logo-size--medium group--sm" src="/public/img/customer-logos/<%= cf_customer["slug"] %>-logo.png" alt="<%= cf_customer["company_name"] %> Logo"/>
+            <img class="logo-size--medium group--sm lozad" data-src="/public/img/customer-logos/<%= cf_customer["slug"] %>-logo.png" alt="<%= cf_customer["company_name"] %> Logo"/>
         </a>
         <h3 class="lead"><%= cf_customer["case_study"]["case_study_title"] %></h3>
     </div>
