Review edits: copy tweaks, share image.

--- a/source/compliant-platform-as-a-service/index.html.slim
+++ b/source/compliant-platform-as-a-service/index.html.slim
@@ -26,7 +26,7 @@ block_tech:
     image: https://images.ctfassets.net/189dvqdsjh46/6zN11I8ri8KSk8quuEa6K2/471fc533868669f2d09bf624fc79836f/technology-utilities.png
   -
     title: "Flexible Deployments"
-    body: "Use our buildpacks with a simple git-push process, or configure your own process with mature tools. It's your choice."
+    body: "Use our buildpacks with a simple git push process, or configure your own process with mature tools. It's your choice."
     image: https://images.ctfassets.net/189dvqdsjh46/67qGlOMbMQ842E4WSgOIOS/15ed7de57be473dcfa6a8563306c2720/technology-deployments.png
 block_benefits:
   -
@@ -50,14 +50,14 @@ block_benefits:
     feature: "Datica's tools immediately bring your organization to the starting line, enabling focus on business priorities."
     benefit: "Do not waste precious months getting your infrastructure to a compliant state just to get started on your product or initiative."
 ---
-- current_page.data.share_image = image_share_platform
+- current_page.data.share_image = 'https://images.ctfassets.net/189dvqdsjh46/2TCuBiWHHGCUiCccym8uye/55dbf2a93f18e582b488ba95a04b591c/cta-talk-to-us.jpg'
 - the_form = data.site.forms['54agWFbPVYog62Ugg64ocW']
 
 section#intro.section-article.container-gray-12
   .row.align-center
     .columns.small-12.medium-10.large-8.text-center
       h1.headline-3 The Compliant Cloud Platform Perfectly Designed for Early-Stage Applications
-      p The Datica Compliant Platform as a Service (CPaaS) makes hosting compliant healthcare applications as simple as <code>git-push</code>.
+      p The Datica Compliant Platform as a Service (CPaaS) makes hosting compliant healthcare applications as simple as <code>git push.</code>
   .row.align-center
     .columns.small-12.medium-10.large-8.text-center
       - diagram = "https://images.ctfassets.net/189dvqdsjh46/1zXwr2EWQoMkIskG68y8Qk/cc63f23b8f6d676b76e0e45242d4a629/platform-overview-diagram-2x.png"
@@ -82,7 +82,7 @@ section#intro.section-article.container-gray-12
       img.lozad.logo-size--xlarge.group--sm alt="Compliance" data-src="https://images.ctfassets.net/189dvqdsjh46/3McfWoQ9Vmm4iciuu4oYe4/64ef01a47e5a89d1b31c45b8942bb076/build_flow_step_3.png?w=400" src="https://images.ctfassets.net/189dvqdsjh46/3McfWoQ9Vmm4iciuu4oYe4/64ef01a47e5a89d1b31c45b8942bb076/build_flow_step_3.png?fm=jpg&w=200&q=10" /
       h4.headline-4 Manage Compliance
       p.lead.nomargin Your app is now compliant on Datica.
-      p.text-left Once you’re application is live on Datica you’ll enjoy a suite of tools and products to manage your application’s environment. From intrusion detection to backups and much much more.
+      p.text-left Once your application is live on Datica you’ll enjoy a suite of tools and products to manage your application’s environment. From intrusion detection to backups and much much more.
 /data-interchange="[, small]"
 section#hitrust.container-gray-11
   .section-article.container-image--center.lozad data-background-image="/public/img/art/hexagon-bg-simple-light.svg"
@@ -140,7 +140,7 @@ section#ui.section-article.container-gray-11
   .row.align-center
     .columns.small-12.large-6
       p.lead.text-center.group
-        | Using the Datica web dashboard is a delightful experience, with a full suite of tools available at your fingertips. The dashboard and CLI make building apps engaging while maintaining security.
+        | The Datica web dashboard and CLI make building and managing your compliant apps easy—while maintaining security.
   .row.align-center
     .columns.small-12
       - ui = 'https://images.ctfassets.net/189dvqdsjh46/3n9ldRiT84qkuwESeoo4Mq/14115cc48d5c89252553e2966ad5c16a/cpaas-mockup-2017-2x.png'
