--- a/source/partials/section-promos/_report-promo.erb
+++ b/source/partials/section-promos/_report-promo.erb
@@ -37,8 +37,8 @@ end
                             <%= 
                             partial "partials/snippets/button", 
                                 :locals => {
-                                    :label => "Download your free report", 
-                                    :title => "Get the report", 
+                                    :label => "Read more", 
+                                    :title => "Read more", 
                                     :url => "/innovation/" + p.slug + "/", 
                                     # :rel => "external", 
                                     :button_classes => "button button--primary card-button-override", 
