--- a/source/layouts/company.erb
+++ b/source/layouts/company.erb
@@ -14,7 +14,7 @@
     </head>
     <% if build? %><%= partial "partials/scripts/google-tm-body" %><% end %>
     <body class="<%= page_classes %>">
-        <%#= partial "partials/snippets/alert-ribbon" %>
+        <%= partial "partials/snippets/alert-ribbon" %>
         <div class="container-color--dark-alt">
             <%= partial "partials/head/header", :locals => { :style => "light" } %>
         </div>
