--- a/source/partials/snippets/_alert-ribbon.slim
+++ b/source/partials/snippets/_alert-ribbon.slim
@@ -5,10 +5,13 @@
 /   .column.small-2.medium-4.container-image-fill(style="background-image: url('https://images.ctfassets.net/189dvqdsjh46/1X6QRrY9gYumsoIIsM6QSO/3563e2855131830d7a0622747044a934/build-18-bg-bright.svg');")
 /     button class="alert-ribbon--action dismiss close-button button--inverted" aria-label="Dismiss alert" type="button" data-close="" title="No thanks"
 /       span aria-hidden="true" &times;
+- event_title = 'Webinar: What Really is Compliance? - Sept. 26, 1pm - Register today!'
+- event_img = 'https://images.ctfassets.net/189dvqdsjh46/7cYrQDOpgcCksAUKIsQaSY/16c232603bc61794d7a408bc4223a159/webinar-c3-promo-ribbon-desktop.png'
+- event_url = '/webinars/what-really-is-compliance/'
 
-/ aside id="alertTop" style="background-color: #373D50;" class="hide dismiss full-width alert-ribbon text-center" data-closable=""
-  a.dismiss(href="https://content.datica.com/k8s-hitrust-2018-06-20" title="Webinar: HITRUST + Kubernetes<sup>&reg;</sup> - June 20, 1pm - Register today!")
-    img data-interchange="[https://images.ctfassets.net/189dvqdsjh46/q5Q9qWFMWsAe8AegsakQw/568bf51e8f15cf22f84d5f5a849692dc/webinar-k8-2-promo-banner.png?w=960, small], [https://images.ctfassets.net/189dvqdsjh46/4VhkDIZs8geUeG8MAYaW8A/e76c87b588e5f9c2c52c20559c194c7d/webinar-k8-2-promo-ribbon.png, medium]" alt="Webinar: HITRUST + Kubernetes<sup>&reg;</sup> - June 20, 1pm" /
+aside id="alertTop" style="background-color: #373D50;" class="hide dismiss full-width alert-ribbon text-center" data-closable=""
+  a.dismiss(href=event_url title=event_title)
+    img.lozad data-src="#{event_img}" alt=event_title /
   .row.align-center
     button class="alert-ribbon--action dismiss close-button button--inverted" aria-label="Dismiss alert" type="button" data-close="" title="No thanks"
       span aria-hidden="true" &times;
