--- a/source/assets/scss/modules/overrides.scss
+++ b/source/assets/scss/modules/overrides.scss
@@ -300,7 +300,25 @@
         z-index: 10;
     }
 }
-
+.faded {
+    @include breakpoint (large) {
+        @include opacity(0.6);
+        @include easing(150ms);
+        &:hover {
+            @include opacity(1);
+        }
+    }
+}
+.faded-max {
+    @extend .faded;
+    transition-duration: $timing-slow;
+    @include breakpoint (large) {
+        @include opacity(0.2);
+    }
+}
+.opacity-100 {
+    opacity: 100;
+}
 
 .nomargin, .no-margin {
     margin-bottom: 0;
