--- a/source/assets/scss/modules/overrides.scss
+++ b/source/assets/scss/modules/overrides.scss
@@ -299,6 +299,9 @@
     &-10 {
         z-index: 10;
     }
+    &-auto {
+        z-index: auto;
+    }
 }
 .faded {
     @include breakpoint (large) {
