--- a/source/partials/cards/_webinar-poster.slim
+++ b/source/partials/cards/_webinar-poster.slim
@@ -17,5 +17,5 @@ a.lozad.preview.container-gray-3.container-image-fill href="/webinars/#{entry["s
         - if entry.has_key?("discovery_topic")
             li
                 span.label.info.round = data.site.discover[entry.discovery_topic.id].title
-    .preview-cta.headline-5.spaced-out.show-for-large Watch now
+    /.preview-cta.headline-5.spaced-out.show-for-large Watch now
     = inline_svg("icon-video-play-circle", class: "preview-icon icon-size--xlarge svg-color--white")
