--- a/source/pricing/_old/_enterprise.html.erb
+++ b/source/pricing/_old/_enterprise.html.erb
@@ -19,7 +19,7 @@ layout: basic
                     <p class="lead">An enterprise account manager will follow up to learn more about your needs and work with you on solutions opportunities.</p>
                 </div>
             </div>
-            <div class="columns small-12 medium-6 position-relative split-section-form">
+            <div class="columns small-12 medium-6 relative split-section-form">
                 <div class="callout drop group" id="absoluteForm">
                     <%= partial("partials/snippets/form-hubspot", :locals => { :form_id => "d9555686-756f-4140-8afa-f791daef81b8" }) %>
                 </div>
