--- a/source/assets/scss/modules/webinars.scss
+++ b/source/assets/scss/modules/webinars.scss
@@ -15,6 +15,7 @@
     color: white;
     padding: 2rem;
     margin-bottom: 2rem;
+    overflow: hidden;
     // min-height: 25rem;
     @include breakpoint (medium) {
         min-height: 15rem;
@@ -72,6 +73,18 @@
         bottom: 3.9rem;
         right: 10rem;
         transition: all $timing-default * 2 ease;
+    }
+    &-bg {
+        top: 0;
+        left: 0;
+        height: 100%;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            opacity: 0.7 !important; // override lozad .loaded
+            filter: blur(2px);
+        }
     }
     &:hover {
         color: $white;
