--- a/source/contentful_templates/webinar.html.slim
+++ b/source/contentful_templates/webinar.html.slim
@@ -22,9 +22,9 @@ ruby:
     if p.has_key?("event_date")
         current_page.data.date = p['event_date'].strftime('%B %-d, %Y')
         if today.strftime("%F") > p['event_date'].strftime("%F")
-            puts "this already happened"
+            is_future = false # puts "this already happened"
         else
-            puts "this is a future entry"
+            is_future = true # puts "this is a future entry"
         end
     else
         current_page.data.date = today.strftime('%B %-d, %Y')
@@ -56,37 +56,44 @@ ruby:
                     a.link--dark href="/webinars" Datica Webinars
         .row.align-center.group
             .columns.small-12.large-10.group
-                #webinar-container.preview.container-gray-3.container-image-fill href="/webinars/#{p["slug"]}" title=("View webinar") data-interchange="[#{thumb}, small]"
-                    div.preview-subhead Datica Webinar
-                    h1.headline-3.nomargin = p["title"]
-                    p.lead = (p.has_key?("subhead") ? p.subhead : nil)
-                    .menu.simple.group
-                        li
-                            = inline_svg("small/icon-event-note", class: "icon-inline icon-left")
-                            span = p['event_date'].strftime('%B %-d, %Y')
-                        - if p.has_key?("discovery_topic")
+                #webinar-container.preview.container-gray-1.relative href="/webinars/#{p["slug"]}" title=("View webinar")
+                    .webinar-meta.z-stack-10.relative
+                        #webinar-play.hide
+                            - if p.has_key?("video_embed")
+                                = Kramdown::Document.new(data.site.videos[p.video_embed.id].custom_form).to_html
+
+                        div.preview-subhead Datica Webinar
+                        h1.headline-3.nomargin = p["title"]
+                        p.lead = (p.has_key?("subhead") ? p.subhead : nil)
+                        .menu.simple.group
                             li
-                                span.label.info.round = data.site.discover[p.discovery_topic.id].title
-                    - if p.has_key?("authors")
-                        aside.group
-                            .subhead--spaced.faded.headline-6.group--sm Presented by
-                            - p["authors"].each do | author |
-                                p
-                                    = partial("partials/snippets/person", :locals => { :p => author, :classes => "person-light" })
-                    #preview-register.show
-                        .preview-cta.headline-5.spaced-out.show-for-large Register to watch
-                        = inline_svg("icon-video-play-circle", class: "preview-icon icon-size--xlarge svg-color--white")
-                    #preview-registered.hide
-                        .preview-cta.headline-5.spaced-out.show-for-large.opacity-100 You're Registered
-                        = inline_svg("small/icon-check-circle", class: "opacity-100 preview-icon icon-size--xlarge svg-color--white")
-                #webinar-play.hide
-                    - if p.has_key?("video_embed")
-                        = Kramdown::Document.new(data.site.videos[p.video_embed.id].custom_form).to_html
-            / .columns.small-12.large-6
+                                = inline_svg("small/icon-event-note", class: "icon-inline icon-left")
+                                span = p['event_date'].strftime('%B %-d, %Y')
+                            - if p.has_key?("discovery_topic")
+                                li
+                                    span.label.info.round = data.site.discover[p.discovery_topic.id].title
+                        - if p.has_key?("authors")
+                            aside
+                                .subhead--spaced.faded.headline-6.group--sm Presented by
+                                - p["authors"].each do | author |
+                                    p
+                                        = partial("partials/snippets/person", :locals => { :p => author, :classes => "person-light" })
+                        #preview-register.show
+                            / .preview-cta.headline-5.spaced-out.show-for-large Register to watch
+                            = inline_svg("icon-video-play-circle", class: "preview-icon icon-size--xlarge svg-color--white")
+                            
+                    #webinar-bg.absolute.preview-bg.z-stack-0.group
+                        img.lozad.img-cover.img-multiply src=thumb data-src=thumb
+
 
         .row.align-center
             .columns.small-12.large-4
-                #webinar-title.hide
+                - if is_future == true
+                    .is-registered.callout.drop.hide
+                        = inline_svg("small/icon-event-note", class: "float-right icon-size--large svg-color--blue")
+                        h3.headline-4 You're Registered!
+                        p Join us <strong>#{p['event_date'].strftime('%A, %B %-d, %Y, %l %P')} CST</strong>
+                /#webinar-title.hide
                     h2.headline-4 = p["title"]
                     - if p.has_key?("authors")
                         aside
