--- a/source/partials/cards/_discover.erb
+++ b/source/partials/cards/_discover.erb
@@ -11,7 +11,7 @@
             <% end %>
         </div>
         <% if post.has_key?("featured_image") %>
-            <div class="lozad container-gray-7 bg-blend-multiply callout--article-image container-image--center" data-background-image="<%= post["featured_image"]["url"] %>?fit=scale&w=400&h=250&q=55"></div>
+            <div class="lozad container-gray-7 img-multiply callout--article-image container-image--center" data-background-image="<%= post["featured_image"]["url"] %>?fit=scale&w=400&h=250&q=55"></div>
         <% end %>
     </a>
 </div>
