--- a/source/pricing/_old/_developer.html.erb
+++ b/source/pricing/_old/_developer.html.erb
@@ -19,7 +19,7 @@ layout: basic
                     <p class="lead">Reach out to us, and a Datica team member will follow up to spec out your environment and get you started.</p>
                 </div>
             </div>
-            <div class="columns small-12 medium-6 position-relative split-section-form">
+            <div class="columns small-12 medium-6 relative split-section-form">
                 <div class="callout drop" id="absoluteForm">
                     <%= partial("partials/snippets/form-hubspot", :locals => { :form_id => "fe1d0124-f5d6-414e-b915-97a153f578ff" }) %>
                 </div>
