--- a/source/webinars/index.html.slim
+++ b/source/webinars/index.html.slim
@@ -24,6 +24,8 @@ ruby:
                 h1.headline-2 Datica Webinars
                 / p.lead Authoritative webinars Written By Industry Experts
         - sorted_entries.take(1).each do | id, webinar_entry |
+            - if webinar_entry.has_key?("event_date")
+                - if today.strftime("%F") >= webinar_entry['event_date'].strftime("%F") ? is_future = false : is_future = true
             .row.align-center
                 .columns.small-12.large-6
                     = partial "partials/cards/webinar-poster", :locals => { :entry => webinar_entry }
