Polish, alignment checks, mobile testing

--- a/source/contentful_templates/webinar.html.slim
+++ b/source/contentful_templates/webinar.html.slim
@@ -81,8 +81,8 @@ ruby:
                             / .preview-cta.headline-5.spaced-out Register to watch
                             = inline_svg("icon-video-play-circle", class: "preview-icon icon-size--xlarge svg-color--white")
                             
-                    #webinar-bg.absolute.preview-bg.z-stack-0.group
-                        img.lozad.img-cover.img-multiply.blur-2 src="#{thumb}?w=250&fm=jpg&q=10" data-src="#{thumb}?w=840"
+                    #webinar-bg.absolute.preview-bg.z-stack-0.group.img-multiply.blur-2
+                        img.lozad.img-cover src="#{thumb}?w=250&fm=jpg&q=10" data-src="#{thumb}?w=840"
 
 
         .row.align-center
