--- a/source/assets/scss/modules/images.scss
+++ b/source/assets/scss/modules/images.scss
@@ -43,6 +43,10 @@ figcaption{
         //opacity: 1 !important;
     }
 }
+.desat {
+    filter:         saturate(0.3);
+    -webkit-filter: saturate(0.3);
+}
 .image-darker {
     filter:         brightness(50%);
     -webkit-filter: brightness(50%);
@@ -83,6 +87,11 @@ figcaption{
         filter:         blur(2px);
         -webkit-filter: blur(2px);
     }
+}
+.diffuse { // combo
+    filter:         blur(2px) saturate(0.1);
+    -webkit-filter: blur(2px) saturate(0.1);
+    -ms-filter:     blur(2px) saturate(0.1);
 }
 .image {
     // use these in conjunction with float classes, like .float-left, .float-right, .float-right-on-medium, etc.
