--- a/source/assets/scss/modules/webinars.scss
+++ b/source/assets/scss/modules/webinars.scss
@@ -82,6 +82,9 @@
         left: 0;
         height: 100%;
         width: 100%;
+        transition:         0.5s filter linear;
+        -webkit-transition: 0.5s -webkit-filter linear;
+        -ms-transition:     0.5s -ms-filter linear;
         img {
             width: 100%;
             height: 100%;
